# Advanced-End-to-End-RAG-Application

./: main.py  pyproject.toml  requirements.txt
data/: AI.txt
multi_doc_chat/config/: config.yaml
multi_doc_chat/logger/: logger.py
multi_doc_chat/utils/: config_loader.py  file_io.py  file_ops.py  model_loader.py
notebooks/: RAG.ipynb
