[project]
name = "advanced-end-to-end-rag-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "openai>=2.8.0",
    "python-dotenv>=1.2.1",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
]
